# cargo-manifest

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: general.yml
src/: afs.rs  cargo_toml.rs  error.rs  lib.rs
tests/: autolib.rs  autotarget.rs  opt_level.toml  parse.rs  serialize.rs
tests/autobin/: Cargo.toml
tests/autobuild/: Cargo.toml
tests/autolib/: Cargo.toml
tests/autolib/name_override/: Cargo.toml
tests/autolib/other_override/: Cargo.toml
tests/autolib/path_override/: Cargo.toml
tests/metadata/: Cargo.toml  build.rs
tests/snapshots/: autolib__autolib.snap  autotarget__full_example.snap  autotarget__full_example_with_declarations_2015.snap  autotarget__full_example_with_declarations_2021.snap  autotarget__full_example_with_declarations_2024.snap  autotarget__full_example_without_discovery.snap  parse__autobin.snap  parse__autobuild.snap  parse__autolib.snap  parse__build_dependencies_casing.snap  parse__default_features_casing.snap  parse__dev_dependencies_casing.snap  parse__legacy-2.snap  parse__legacy.snap  parse__metadata.snap  parse__opt_level.snap  parse__opt_version.snap  parse__package_inheritance.snap  parse__package_lints.snap  parse__proc_macro_casing.snap  parse__workspace_dependency-2.snap  parse__workspace_dependency.snap  parse__workspace_lints-2.snap  parse__workspace_lints.snap  parse__workspace_lints_inheritance.snap  parse__workspace_lints_override_inherited-2.snap  parse__workspace_lints_override_inherited.snap  serialize__with_lints.snap
