[package]
edition = "2018"
name = "cargo-manifest"
version = "0.2.9"
authors = ["Kornel <kornel@geekhood.net>, Luca Palmieri <rust@lpalmieri.com>"]
description = "Helper crate to parse and manipulate manifests - `Cargo.toml` files."
keywords = ["cargo", "metadata", "toml", "serde", "manifest"]
categories = ["rust-patterns", "parser-implementations"]
repository = "https://github.com/LukeMathWalker/cargo-manifest"
documentation = "https://docs.rs/cargo-manifest"
license = "Apache-2.0 OR MIT"
exclude = ["tests"]

[lib]
name = "cargo_manifest"
path = "src/lib.rs"

[dependencies]
serde = "1.0.114"
serde_derive = "1.0.114"
toml = { version = "0.5.6", features = ["preserve_order"] }
